[gd_scene load_steps=23 format=3 uid="uid://dhobi0m2sukes"]

[ext_resource type="Texture2D" uid="uid://hjg8na1xvy3u" path="res://assets/images/player.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://bo2b6teau1qit" path="res://scripts/player.gd" id="1_rkbax"]
[ext_resource type="Script" uid="uid://8pq8uo0ucmus" path="res://addons/virtual_joystick/scripts/virtual_joystick.gd" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://bc6paavcnnwf6" path="res://addons/virtual_joystick/sprites/stick_pressed.png" id="4_qlg0r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rkbax"]
atlas = ExtResource("1_oul6g")
region = Rect2(64, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("1_oul6g")
region = Rect2(64, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("1_oul6g")
region = Rect2(64, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("1_oul6g")
region = Rect2(64, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oul6g"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1dw6"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 216, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hg6s5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkbax")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oul6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}],
"loop": true,
"name": &"walk_rightdown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}],
"loop": true,
"name": &"walk_rightup",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dw6")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8t03j"]
size = Vector2(8, 14)

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("anim", "timer_invicible", "hitbox") groups=["player"]]
script = ExtResource("1_rkbax")
anim = NodePath("AnimatedSprite2D")
timer_invicible = NodePath("Timer")
hitbox = NodePath("hit_area")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -2)
sprite_frames = SubResource("SpriteFrames_hg6s5")
animation = &"idle"
autoplay = "idle"
offset = Vector2(-1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8t03j")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="coin_area" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="coin_area"]
shape = SubResource("RectangleShape2D_8t03j")

[node name="hit_area" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hit_area"]
shape = SubResource("RectangleShape2D_8t03j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VirtualJoystick" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2(238, 613)
script = ExtResource("3_dqkch")
zero_at_touch = true
stick_pressed = ExtResource("4_qlg0r")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="coin_area" to="." method="_on_coin_area_area_entered"]
[connection signal="area_entered" from="hit_area" to="." method="_on_hit_area_area_entered"]
[connection signal="analogic_change" from="CanvasLayer/VirtualJoystick" to="." method="_on_virtual_joystick_analogic_change"]
